Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntObjNumber.quorum
class Main
    action Main
        Integer int
        int = cast(Integer, 7.5)
        if int:GetValue() = 7
            output "passed"
        end
    end
end