Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumObjIntObjWrapped.quorum
class main
    action main
        Integer int
        int:setValue(5)
        Number num = int
    end
end